# AI-Agent

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
Main Frontend/: .env.example  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
Main Frontend/docs/: api_reference.md
Main Frontend/scripts/: test_webhook.py
Main Frontend/src/agents/: booking_specialist.py  triage_agent.py
Main Frontend/src/graph/: workflow.py
Main Frontend/src/tools/: calendar_tools.py
Main Frontend/src/utils/: persistence.py
Main Frontend/tests/: test_booking.py  test_date_parser.py
assignment-2/: .gitignore  README.md  requirements.txt  streamlit_app.py
assignment-2/config/: settings.yaml
assignment-2/docs/: architecture.md
assignment-2/scripts/: setup_db.py
assignment-2/src/state/: conversation_state.py
assignment-2/src/utils/: config.py  database.py  date_parser.py  persistence.py  webhook.py
assignment-2/tests/: test_tools.py  test_triage.py
data/: gigacorp_faq.md
src/agents/: support_agent.py
src/chains/: rag_chain.py
src/memory/: conversation_memory.py
src/retrieval/: vector_store.py
src/utils/: config.py
